debugging api routes

--- a/client/src/components/ContactForm/Form/style.css
+++ b/client/src/components/ContactForm/Form/style.css
@@ -1,11 +1,17 @@
-label {
+.form-line {
   display: block;
   font-size: 2em;
+  width: 100%;
   margin: 2% auto;
+}
+
+label {
+  text-align: left;
 }
 
 input, textarea {
   margin-left: 2%;
+  text-align: right;
 }
 
 input {
