fixed, carousel, relative, paths,,,

--- a/client/src/components/Carousel/CarouselImage/style.css
+++ b/client/src/components/Carousel/CarouselImage/style.css
@@ -1,6 +1,6 @@
 img {
-  height: 30%;
-  width: 50%;
+  height: auto;
+  width: 40%;
   clear: "both";
   padding-top: 120;
   text-align: "center";
