--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,7 +31,7 @@ body {
   background:hsl(0, 0%, 7%);
 }
 .hero-body {
-    background: black url(images/SkylineStudio1.jpg) center / cover;
+    background: black url(/images/SkylineStudio1.jpg) center / cover;
     opacity: .8;
     text-align: center;
 }
