--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,9 +31,14 @@ body {
   background:hsl(0, 0%, 7%);
 }
 .hero-body {
-    background: black url(/images/SkylineStudio1.jpg) center / cover;
-    opacity: .8;
     text-align: center;
+    justify-content: center;
+}
+
+.skyline-banner{
+  background: black url(/images/SkylineStudio1.jpg) center / cover;
+  opacity: .8;
+  text-align: center;
 }
 
 .title {
@@ -43,5 +48,6 @@ body {
 
 .calendar {
   justify-content: center;
-  font-size: 16px;
+  margin: auto;
+  padding-left: 200px;
 }
