--- a/client/src/components/Carousel/CarouselImage/style.css
+++ b/client/src/components/Carousel/CarouselImage/style.css
@@ -1,8 +1,17 @@
 img {
-  height: auto;
-  width: 40%;
+  height: 600px;
+  width: 900px;
   clear: "both";
   padding-top: 120;
   text-align: "center";
-  margin: auto;
+  padding: 5px;
+  overflow-x: "scroll";
+  
+  /* animation: slideshow 10s linear infinite; */
+}
+
+.image-slide {
+  width: auto;
+  height: auto;
+
 }
