--- a/client/src/components/ContactForm/Form/style.css
+++ b/client/src/components/ContactForm/Form/style.css
@@ -1,7 +1,7 @@
 .form-line {
   display: block;
   font-size: 2em;
-  width: 100%;
+  width: 80%;
   margin: 2% auto;
 }
 
@@ -11,7 +11,7 @@ label {
 
 input, textarea {
   margin-left: 2%;
-  text-align: right;
+  text-align: left;
 }
 
 input {
