--- a/client/src/pages/Home/style.css
+++ b/client/src/pages/Home/style.css
@@ -93,45 +93,77 @@ body {
   }
 
   #studio-section {
-      background: rgb(230, 230, 230);
+      background: rgb(204, 204, 204);
   }
 
+  #studio-pic1 {
+    background: black url(/images/audiowaves.jpg) center / cover;
+    border-radius: 2px;
+    height: 550px;
+    width: 100%;
+    border-style: solid;
+    border-width: 3px;
+    border-color: rgb(39, 39, 39);
+    box-shadow: 4px 4px 2px rgb(46, 46, 46);
+  
+  }
   #studio-title {
       color: black;
+      margin: 10px 0px 0px;
+  }
+#studio-subtitle {
+    font-size: 40px;
+}
+
+  #studio-text{
+      color: black;
+      font-size: 25px;
+  }
+  #studio-text2 {
+      font-size: 30px;
+      color: black;
+  }
+  #studio-pic1 {
+      background: black url(/images/Piano_2.jpg);
+      
+  }
+  #studio-button{
+      margin: -45px 10px 30px 10px;
   }
 
   /* Joe Horizontal Slideshow */
 
   .tech-slideshow {
     height: 200px;
-    max-width: 800px;
-    margin: 0 auto;
+    /* max-width: 800px; */
+    width: 100%;
+    margin: 0 0;
     position: relative;
-    overflow: hidden;
+    /* overflow: hidden; */
     transform: translate3d(0, 0, 0);
   }
   
   .tech-slideshow > div {
-    height: 200px;
+    height: 125px;
     width: 2526px;
-    background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/3/collage.jpg);
+    background: url(/images/SkylineSlideshow.jpg);
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
+    /* height: 100%; */
     transform: translate3d(0, 0, 0);
   }
   .tech-slideshow .mover-1 {
-    animation: moveSlideshow 12s linear infinite;
+    animation: moveSlideshow 70s linear infinite;
   }
   .tech-slideshow .mover-2 {
     opacity: 0;
     transition: opacity 0.5s ease-out;
-    background-position: 0 -200px;
-    animation: moveSlideshow 15s linear infinite;
+    /* background-position: 0 -200px; */
+    animation: moveSlideshow 30s linear infinite;
   }
   .tech-slideshow:hover .mover-2 {
-    opacity: 1;
+    /* opacity: 1; */
   }
   
   @keyframes moveSlideshow {
